Padding on formlines first-child removed to fix clipping of color swatch

--- a/src/style/panel.less
+++ b/src/style/panel.less
@@ -137,10 +137,6 @@
     padding-bottom: 0.2rem;    
 }
 
-.formline:first-child {
-    padding-top: 0;
-}
-
 .formline__padded-first-child:first-child {
     padding-top: 0.8rem;
 }
